added dozer dependency and more plugins